update LeetCode Biweekly Contest 139

--- a/algorithm/LeetCode/[Easy] 1684. Count the Number of Consistent Strings.md
+++ b/algorithm/LeetCode/[Easy] 1684. Count the Number of Consistent Strings.md
@@ -47,3 +47,33 @@ class Solution:
     def countConsistentStrings(self, allowed: str, words: List[str]) -> int:
         return sum(all(c in allowed for c in w) for w in words)
 ```
+
+**Solution 2: (Bit Manipulation)**
+```
+Runtime: 41 ms
+Memory: 33.78 MB
+```
+```c++
+class Solution {
+public:
+    int countConsistentStrings(string allowed, vector<string>& words) {
+        int dp = 0;
+        for (auto c: allowed) {
+            dp |= 1<<(c-'a');
+        }
+        int ans = 0;
+        bool flag;
+        for (auto w: words) {
+            flag = true;
+            for (auto c: w) {
+                if ((dp & 1<<(c-'a')) == 0) {
+                    flag = false;
+                    break;
+                }
+            }
+            ans += flag == true;
+        }
+        return ans;
+    }
+};
+```
