--- a/algorithm/LeetCode/[Easy] 2220. Minimum Bit Flips to Convert Number.md
+++ b/algorithm/LeetCode/[Easy] 2220. Minimum Bit Flips to Convert Number.md
@@ -60,3 +60,65 @@ public:
     }
 };
 ```
+
+**Solution 3: (Brute Force)**
+```
+Runtime: 3 ms
+Memory: 7.70 MB
+```
+```c++
+class Solution {
+public:
+    int minBitFlips(int start, int goal) {
+        int ans = 0;
+        while (start || goal) {
+            ans += ((start&1) != (goal&1));
+            start >>= 1;
+            goal >>= 1;
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 4: (XOR)**
+```
+Runtime: 0 ms
+Memory: 7.60 MB
+```
+```c++
+class Solution {
+public:
+    int minBitFlips(int start, int goal) {
+        int ans = 0;
+        int cur = start ^ goal;
+        while (cur) {
+            ans += cur&1;
+            cur >>= 1;
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 5: (Brian Kernighan’s Algorithm)**
+```
+Runtime: 0 ms
+Memory: 7.64 MB
+```
+```c++
+class Solution {
+public:
+    int minBitFlips(int start, int goal) {
+        // XOR to find differing bits
+        int xorResult = start ^ goal;
+        int count = 0;
+        // Brian Kernighans algorithm to count 1s
+        while (xorResult) {
+            xorResult &= (xorResult - 1);  // Clear the lowest set bit
+            count++;
+        }
+        return count;
+    }
+};
+```
