--- a/algorithm/LeetCode/[Hard] 2416. Sum of Prefix Scores of Strings.md
+++ b/algorithm/LeetCode/[Hard] 2416. Sum of Prefix Scores of Strings.md
@@ -81,35 +81,43 @@ class Solution:
 
 **Solution 2: (Trie)**
 ```
-Runtime: 1063 ms
-Memory Usage: 448.1 MB
+Runtime: 630 ms
+Memory: 719.30 MB
 ```
 ```c++
-struct Trie {
-    Trie *ch[26] = {};
-    int visited = 0;
+struct TrieNode {
+    TrieNode *child[26] = {nullptr};
+    int cnt = 0;
 };
 
 class Solution {
-public:
-    vector<int> sumPrefixScores(vector<string>& words) {
-        Trie trie;
-        vector<int> ans;
-        for (string& x: words) {
-            auto t = &trie;
-            for (char& c: x) {
-                if (!t->ch[c - 'a']) t->ch[c - 'a'] = new Trie();
-                t->ch[c - 'a']->visited++;
-                t = t->ch[c - 'a'];
+    TrieNode *root;
+    void build(vector<string> &words) {
+        for (auto w: words) {
+            auto node = root;
+            for (auto c: w) {
+                if (!node->child[c-'a']) {
+                    node->child[c-'a'] = new TrieNode();
+                }
+                node = node->child[c-'a'];
+                node->cnt += 1;
             }
         }
-        for (string& x: words) {
-            auto t = &trie; int curr = 0;
-            for (char& c: x) {
-                curr += t->ch[c - 'a']->visited;
-                t = t->ch[c - 'a'];
+    }
+public:
+    vector<int> sumPrefixScores(vector<string>& words) {
+        root = new TrieNode();
+        build(words);
+        vector<int> ans;
+        int cnt;
+        for (auto w: words) {
+            cnt = 0;
+            auto node = root;
+            for (auto c: w) {
+                node = node->child[c-'a'];
+                cnt += node->cnt;
             }
-            ans.push_back(curr);
+            ans.push_back(cnt);
         }
         return ans;
     }
