update LeetCode Weekly Contest 418

--- a/algorithm/LeetCode/[Easy] 1331. Rank Transform of an Array.md
+++ b/algorithm/LeetCode/[Easy] 1331. Rank Transform of an Array.md
@@ -66,3 +66,30 @@ class Solution:
         
         return [count[a] for a in arr]
 ```
+
+**Solution 3: (Hash Table, ordered map)**
+```
+Runtime: 123 ms
+Memory: 56.37 MB
+```
+```c++
+class Solution {
+public:
+    vector<int> arrayRankTransform(vector<int>& arr) {
+        int n = arr.size(), i;
+        vector<int> ans(n);
+        map<int, vector<int>> m;
+        for (i = 0; i < n; i ++) {
+            m[arr[i]].push_back(i);
+        }
+        i = 1;
+        for (auto [_, v]: m) {
+            for (auto j: v) {
+                ans[j] = i;
+            }
+            i += 1;
+        }
+        return ans;
+    }
+};
+```
