update LeetCode Biweekly Contest 141

--- a/algorithm/LeetCode/[Easy] 2696. Minimum String Length After Removing Substrings.md
+++ b/algorithm/LeetCode/[Easy] 2696. Minimum String Length After Removing Substrings.md
@@ -60,3 +60,52 @@ public:
     }
 };
 ```
+
+**Solution 2: (stack)**
+```
+Runtime: 6 ms
+Memory: 10.42 MB
+```
+```c++
+class Solution {
+public:
+    int minLength(string s) {
+        string dp;
+        for (auto c: s) {
+            dp += c;
+            while (dp.size() >= 2 && (*(dp.rbegin()+1) == 'A' && dp.back() == 'B' || *(dp.rbegin()+1) == 'C' && dp.back() == 'D')) {
+                dp.pop_back();
+                dp.pop_back();
+            }
+        }
+        return dp.size();
+    }
+};
+```
+
+**Solution 3: (In Place Modification)**
+```
+Runtime: 7 ms
+Memory: 10.42 MB
+```
+```c++
+class Solution {
+public:
+    int minLength(string s) {
+        int i = 0;
+        vector<char> dp(s.begin(), s.end());
+
+        for (int j = 0; j < s.length(); j++) {
+            dp[i] = dp[j];
+
+            if (i && (dp[i - 1] == 'A' || dp[i - 1] == 'C') && dp[i] == dp[i - 1] + 1) {
+                i -= 1;
+            } else {
+                i += 1;
+            }
+        }
+
+        return i;
+    }
+};
+```
