--- a/algorithm/LeetCode/[Hard] 3311. Construct 2D Grid Matching Graph Layout.md
+++ b/algorithm/LeetCode/[Hard] 3311. Construct 2D Grid Matching Graph Layout.md
@@ -200,3 +200,73 @@ public:
     }
 };
 ```
+
+**Solution 2: (Graph, scan row by row)**
+```
+Runtime: 990 ms
+Memory: 373.39 MB
+```
+```c++
+class Solution {
+public:
+    vector<vector<int>> constructGridLayout(int n, vector<vector<int>>& edges) {
+        vector<unordered_set<int>> g(n);
+        for (auto e: edges) {
+            g[e[0]].insert(e[1]);
+            g[e[1]].insert(e[0]);
+        }
+        int i, k = INT_MAX, pre, cur;
+        for (i = 0; i < n; i ++) {
+            if (k > g[i].size()) {
+                k = g[i].size();
+                pre = i;
+            }
+        }
+        vector<vector<int>> ans;
+        vector<int> row;
+        while (true) {
+            row.clear();
+            row.push_back(pre);
+            i = 1;
+            while (true) {
+                if (ans.size() == 0) {
+                    k = INT_MAX;
+                    for (auto npre: g[pre]) {
+                        if (k > g[npre].size()) {
+                            k = g[npre].size();
+                            cur = npre;
+                        }
+                    }
+                } else {
+                    for (auto npre: g[pre]) {
+                        if (*g[ans.back()[i]].begin() == npre) {
+                            cur = npre;
+                            break;
+                        }
+                    }
+                }
+                row.push_back(cur);
+                g[cur].erase(pre);
+                g[pre].erase(cur);
+                if (ans.size()) {
+                    g[cur].erase(ans.back()[i]);
+                    g[ans.back()[i]].erase(cur);
+                }
+                if (g[cur].size() == g[row[0]].size()) {
+                    break;
+                }
+                pre = cur;
+                i += 1;
+            }
+            ans.push_back(row);
+            if (g[row[0]].size() == 0) {
+                break;
+            }
+            pre = *g[row[0]].begin();
+            g[row[0]].erase(pre);
+            g[pre].erase(row[0]);
+        }
+        return ans;
+    }
+};
+```
