update LeetCode Weekly Contest 420

--- a/algorithm/LeetCode/[Hard] 1106. Parsing A Boolean Expression.md
+++ b/algorithm/LeetCode/[Hard] 1106. Parsing A Boolean Expression.md
@@ -112,3 +112,117 @@ class Solution:
         
         return parse(expression, 0)[0]
 ```
+
+**Solution 3: (Stack)**
+```
+Runtime: 0 ms
+Memory: 9.63 MB
+```
+```c++
+class Solution {
+public:
+    bool parseBoolExpr(string expression) {
+        stack<char> st;
+
+        // Traverse through the expression
+        for (char currChar : expression) {
+            if (currChar == ',' || currChar == '(')
+                continue;  // Skip commas and open parentheses
+
+            // Push operators and boolean values to the stack
+            if (currChar == 't' || currChar == 'f' || currChar == '!' ||
+                currChar == '&' || currChar == '|') {
+                st.push(currChar);
+            }
+            // Handle closing parentheses and evaluate the subexpression
+            else if (currChar == ')') {
+                bool hasTrue = false, hasFalse = false;
+
+                // Process the values inside the parentheses
+                while (st.top() != '!' && st.top() != '&' && st.top() != '|') {
+                    char topValue = st.top();
+                    st.pop();
+                    if (topValue == 't') hasTrue = true;
+                    if (topValue == 'f') hasFalse = true;
+                }
+
+                // Pop the operator and evaluate the subexpression
+                char op = st.top();
+                st.pop();
+                if (op == '!') {
+                    st.push(hasTrue ? 'f' : 't');
+                } else if (op == '&') {
+                    st.push(hasFalse ? 'f' : 't');
+                } else {
+                    st.push(hasTrue ? 't' : 'f');
+                }
+            }
+        }
+
+        // The final result is at the top of the stack
+        return st.top() == 't';
+    }
+};
+```
+
+**Solution 4: (Stack)**
+```
+Runtime: 0 ms
+Memory: 9.68 MB
+```
+```c++
+class Solution {
+public:
+    bool parseBoolExpr(string expression) {
+        stack<pair<int,char>> dp;
+        dp.push({-1,'#'});
+        int i = 0, cur;
+        while (i < expression.size()) {
+            if (expression[i] == '&' || expression[i] == '|' || expression[i] == '!') {
+                dp.push({-1, expression[i]});
+                i += 2;
+            } else if (expression[i] == ',') {
+                i += 1;
+                continue;
+            } else {
+                auto [pre, op] = dp.top();
+                if (expression[i] == 't' || expression[i] == 'f') {
+                    cur = expression[i] == 't' ? 1 : 0;
+                    if (pre == -1) {
+                        pre = cur;
+                    } else {
+                        if (op == '&') {
+                            pre &= cur;
+                        } else if (op == '|') {
+                            pre |= cur;
+                        } else {
+                            pre = !cur;
+                        }
+                    }
+                    dp.top().first = pre;
+                } else {
+                    dp.pop();
+                    if (dp.top().first == -1) {
+                        if (op == '&' || op == '|') {
+                            dp.top().first = pre;
+                        } else {
+                            dp.top().first = !pre;
+                        }
+                    } else {
+                        if (op == '!') {
+                            pre = !pre;
+                        }
+                        if (dp.top().second == '&') {
+                            dp.top().first &= pre;
+                        } else {
+                            dp.top().first |= pre;
+                        }
+                    }  
+                }
+                i += 1;
+            }
+        }
+        return dp.top().first;
+    }
+};
+```
