--- a/algorithm/LeetCode/[Hard] 3321. Find X-Sum of All K-Long Subarrays II.md
+++ b/algorithm/LeetCode/[Hard] 3321. Find X-Sum of All K-Long Subarrays II.md
@@ -48,126 +48,61 @@ Since k == x, answer[i] is equal to the sum of the subarray nums[i..i + k - 1].
 
 # Submissions
 ---
-**Solution 1: (Sliding Window + Two Multisets)**
+**Solution 1: (Sliding Window, top and bottom set)**
 ```
-Runtime: 1114 ms
-Memory: 345.41 MB
+Runtime: 880 ms
+Memory: 293.61 MB
 ```
 ```c++
 class Solution {
 public:
     vector<long long> findXSum(vector<int>& nums, int k, int x) {
-        int n = nums.size();
-        multiset<pair<long long,int>> mn; // multiset to store remaining elements
-        multiset<pair<long long,int>> mx; // multiset to store top x elements and keep track of sum
-        
-        int i=0;
-        int j= i+k-1;
-        
-        unordered_map<int,long long> f;
-        vector<long long> ans;
-        
-        for(int _ = 0; _ < j; _++)
-        {
-            f[nums[_]]+=1;
+        vector<long long> res;
+        unordered_map<int, int> cnt;
+        set<pair<long long, int>, greater<pair<long long, int>>> top, bot;
+        long long running_sum = 0;
+        for (int i = 0; i < nums.size(); ++i) {
+            long long count = cnt[nums[i]];
+            if (count) {
+                if (auto it = bot.find({count, nums[i]}); it != end(bot))
+                    bot.erase(it);
+                else {
+                    top.erase({count, nums[i]});
+                    running_sum -= count * nums[i];               
+                }
+            }
+            cnt[nums[i]] = count + 1;
+            top.insert({count + 1, nums[i]});
+            running_sum += (count + 1) * nums[i];  
+            if (top.size() > x) {
+                auto it_top = prev(end(top));
+                running_sum -= it_top->first * it_top->second;
+                bot.insert({it_top->first, it_top->second});
+                top.erase(it_top);
+            }
+            if (i >= k) {
+                int count = cnt[nums[i - k]];
+                if (auto it = bot.find({count, nums[i - k]}); it != end(bot))
+                    bot.erase(it);
+                else {
+                    it = top.find({count, nums[i - k]});
+                    running_sum -= it->first * it->second; 
+                    top.erase(it);
+                }
+                if (count > 1)
+                    bot.insert({count - 1, nums[i - k]});
+                --cnt[nums[i - k]];
+                if (top.size() < x)
+                    if (auto it = begin(bot); it != end(bot)) {
+                        running_sum += it->first * it->second;
+                        top.insert({it->first, it->second});
+                        bot.erase(it);
+                    }
+            }
+            if (i + 1 >= k)
+                res.push_back(running_sum);
         }
-        
-        long long s = 0;
-        for(auto x: f)
-        {
-            mx.insert({x.second, x.first});
-            s+= (x.second* x.first);
-        }
-        
-        while (mx.size() > x)
-        {
-            mn.insert(*mx.begin());
-            s-= mx.begin()->first * mx.begin()->second;
-            mx.erase(mx.begin());
-        }
-        
-        // cout<<s<<endl;
-        
-        while(j<n)
-        {   
-            if (mx.count({f[nums[j]], nums[j]}))
-            {
-                mx.erase(mx.find({f[nums[j]], nums[j]}));
-                s-= nums[j] * f[nums[j]];
-            }
-            
-            
-            if (mn.count({f[nums[j]], nums[j]}))
-                mn.erase(mn.find({f[nums[j]], nums[j]}));
-            
-            f[nums[j]]+=1;
-            
-            if (f[nums[j]] >= mx.begin()->first)
-            {
-                s+= nums[j] * f[nums[j]];
-                mx.insert({f[nums[j]], nums[j]});
-                
-                mn.insert(*mx.begin());
-                s-= (mx.begin()->first * mx.begin()->second);
-                mx.erase(mx.begin());
-            }
-            else
-            {
-                mn.insert({f[nums[j]], nums[j]});
-            }
-            
-            // cout<<s<<endl;
-            
-            if (mx.size() < x)
-            {
-                s+= mn.rbegin()-> first * mn.rbegin()->second;
-                mx.insert(*mn.rbegin());
-                mn.erase(mn.find(*mn.rbegin()));
-                
-            }
-            
-            ans.push_back(s);
-            
-            if (mx.count({f[nums[i]], nums[i]}))
-            {
-                mx.erase(mx.find({f[nums[i]], nums[i]}));
-                s-= nums[i] * f[nums[i]];
-            }
-            
-            if (mn.count({f[nums[i]], nums[i]}))
-                mn.erase(mn.find({f[nums[i]], nums[i]}));
-            
-            
-            f[nums[i]]-=1;
-            
-            
-            if (f[nums[i]] >= mx.begin()->first)
-            {
-                s+= nums[i] * f[nums[i]];
-                mx.insert({f[nums[i]], nums[i]});
-                
-                mn.insert(*mx.begin());
-                s-= (mx.begin()->first * mx.begin()->second);
-                mx.erase(mx.begin());
-            }
-            else
-            {
-                mn.insert({f[nums[i]], nums[i]});
-            }
-            
-            if (mx.size() < x)
-            {
-                s+= mn.rbegin()-> first * mn.rbegin()->second;
-                mx.insert(*mn.rbegin());
-                mn.erase(mn.find(*mn.rbegin()));
-            }
-            
-            i+=1;
-            j+=1;
-            
-        }
-        
-        return ans;
+        return res;
     }
 };
 ```
