update LeetCode Biweekly Contest 142

--- a/algorithm/LeetCode/[Hard] 2458. Height of Binary Tree After Subtree Removal Queries.md
+++ b/algorithm/LeetCode/[Hard] 2458. Height of Binary Tree After Subtree Removal Queries.md
@@ -116,3 +116,487 @@ public:
     }
 };
 ```
+
+**Solution 3: (Left and Right Traversal)**
+```
+Runtime: 4 ms
+Memory: 183.87 MB
+```
+```c++
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+ * };
+ */
+class Solution {
+    // Array to store the maximum height of the tree after removing each node
+    int maxHeightAfterRemoval[100001];
+    int currentMaxHeight = 0;
+    // Left to right traversal
+    void traverseLeftToRight(TreeNode* node, int currentHeight) {
+        if (node == nullptr) return;
+
+        // Store the maximum height if this node were removed
+        maxHeightAfterRemoval[node->val] = currentMaxHeight;
+
+        // Update the current maximum height
+        currentMaxHeight = max(currentMaxHeight, currentHeight);
+
+        // Traverse left subtree first, then right
+        traverseLeftToRight(node->left, currentHeight + 1);
+        traverseLeftToRight(node->right, currentHeight + 1);
+    }
+
+    // Right to left traversal
+    void traverseRightToLeft(TreeNode* node, int currentHeight) {
+        if (node == nullptr) return;
+
+        // Update the maximum height if this node were removed
+        maxHeightAfterRemoval[node->val] =
+            max(maxHeightAfterRemoval[node->val], currentMaxHeight);
+
+        // Update the current maximum height
+        currentMaxHeight = max(currentHeight, currentMaxHeight);
+
+        // Traverse right subtree first, then left
+        traverseRightToLeft(node->right, currentHeight + 1);
+        traverseRightToLeft(node->left, currentHeight + 1);
+    }
+public:
+    vector<int> treeQueries(TreeNode* root, vector<int>& queries) {
+        traverseLeftToRight(root, 0);
+        currentMaxHeight = 0;  // Reset for the second traversal
+        traverseRightToLeft(root, 0);
+
+        // Process queries and build the result vector
+        int queryCount = queries.size();
+        vector<int> queryResults(queryCount);
+        for (int i = 0; i < queryCount; i++) {
+            queryResults[i] = maxHeightAfterRemoval[queries[i]];
+        }
+
+        return queryResults;
+    }
+};
+```
+
+**Solution 4: (Single Traversal)**
+```
+Runtime: 1789 ms
+Memory: 323.98 MB
+```
+``c++
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+ * };
+ */
+class Solution {
+    // Function to calculate the height of the tree
+    int height(TreeNode* node, unordered_map<TreeNode*, int>& heightCache) {
+        if (node == nullptr) {
+            return -1;
+        }
+
+        // Return cached height if already calculated
+        if (heightCache.count(node)) {
+            return heightCache[node];
+        }
+
+        int h = 1 + max(height(node->left, heightCache),
+                        height(node->right, heightCache));
+        heightCache[node] = h;
+        return h;
+    }
+
+    // DFS to precompute the maximum values after removing the subtree
+    void dfs(TreeNode* node, int depth, int maxVal,
+             unordered_map<int, int>& resultMap,
+             unordered_map<TreeNode*, int>& heightCache) {
+        if (node == nullptr) {
+            return;
+        }
+
+        resultMap[node->val] = maxVal;
+
+        // Traverse left and right subtrees while updating max values
+        dfs(node->left, depth + 1,
+            max(maxVal, depth + 1 + height(node->right, heightCache)),
+            resultMap, heightCache);
+        dfs(node->right, depth + 1,
+            max(maxVal, depth + 1 + height(node->left, heightCache)), resultMap,
+            heightCache);
+    }
+public:
+    vector<int> treeQueries(TreeNode* root, vector<int>& queries) {
+        unordered_map<int, int> resultMap;
+        unordered_map<TreeNode*, int> heightCache;
+
+        // Run DFS to fill resultMap with maximum heights after each query
+        dfs(root, 0, 0, resultMap, heightCache);
+
+        vector<int> result(queries.size());
+        for (int i = 0; i < queries.size(); i++) {
+            result[i] = resultMap[queries[i]];
+        }
+        return result;
+    }
+};`
+``
+
+**Solution 5: (Subtree Size)**
+```
+Runtime: 1108 ms
+Memory: 389.27 MB
+```
+```c++
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+ * };
+ */
+class Solution {
+    // Depth-first search to populate nodeIndexMap and nodeDepths
+    void dfs(TreeNode* root, int depth, unordered_map<int, int>& nodeIndexMap,
+             vector<int>& nodeDepths) {
+        if (root == nullptr) return;
+
+        nodeIndexMap[root->val] = nodeDepths.size();
+        nodeDepths.push_back(depth);
+
+        dfs(root->left, depth + 1, nodeIndexMap, nodeDepths);
+        dfs(root->right, depth + 1, nodeIndexMap, nodeDepths);
+    }
+
+    // Calculate the size of the subtree for each node
+    int calculateSubtreeSize(TreeNode* root,
+                             unordered_map<int, int>& subtreeSize) {
+        if (root == nullptr) return 0;
+
+        int leftSize = calculateSubtreeSize(root->left, subtreeSize);
+        int rightSize = calculateSubtreeSize(root->right, subtreeSize);
+
+        int totalSize = leftSize + rightSize + 1;
+        subtreeSize[root->val] = totalSize;
+
+        return totalSize;
+    }
+public:
+    vector<int> treeQueries(TreeNode* root, vector<int>& queries) {
+        // Map to store the index of each node value
+        unordered_map<int, int> nodeIndexMap;
+
+        // Map to store the number of nodes in the subtree for each node
+        unordered_map<int, int> subtreeSize;
+
+        // Vectors to store node depths and maximum depths from left and right
+        vector<int> nodeDepths;
+        vector<int> maxDepthFromLeft;
+        vector<int> maxDepthFromRight;
+
+        // Perform DFS to populate nodeIndexMap and nodeDepths
+        dfs(root, 0, nodeIndexMap, nodeDepths);
+
+        int totalNodes = nodeDepths.size();
+
+        // Calculate subtree sizes
+        calculateSubtreeSize(root, subtreeSize);
+
+        // Calculate maximum depths from left and right
+        maxDepthFromLeft.push_back(nodeDepths[0]);
+        maxDepthFromRight.push_back(nodeDepths[totalNodes - 1]);
+
+        for (int i = 1; i < totalNodes; i++) {
+            maxDepthFromLeft.push_back(
+                max(maxDepthFromLeft[i - 1], nodeDepths[i]));
+            maxDepthFromRight.push_back(
+                max(maxDepthFromRight[i - 1], nodeDepths[totalNodes - i - 1]));
+        }
+        reverse(maxDepthFromRight.begin(), maxDepthFromRight.end());
+
+        // Process queries
+        vector<int> results(queries.size());
+        for (int i = 0; i < queries.size(); i++) {
+            int queryNode = queries[i];
+            int startIndex = nodeIndexMap[queryNode] - 1;
+            int endIndex = startIndex + 1 + subtreeSize[queryNode];
+
+            int maxDepth = maxDepthFromLeft[startIndex];
+            if (endIndex < totalNodes) {
+                maxDepth = max(maxDepth, maxDepthFromRight[endIndex]);
+            }
+
+            results[i] = maxDepth;
+        }
+
+        return results;
+    }
+};
+```
+
+**Solution 6: (Eulerian Tour)**
+```
+Runtime: 672 ms
+Memory: 479.45 MB
+```
+```c++
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+ * };
+ */
+class Solution {
+    // Depth-first search to build the Euler tour and store node information
+    void dfs(TreeNode* root, int height, vector<int>& eulerTour,
+             unordered_map<int, int>& nodeHeights,
+             unordered_map<int, int>& firstOccurrence,
+             unordered_map<int, int>& lastOccurrence) {
+        if (root == nullptr) return;
+
+        nodeHeights[root->val] = height;
+        firstOccurrence[root->val] = eulerTour.size();
+        eulerTour.push_back(root->val);
+
+        dfs(root->left, height + 1, eulerTour, nodeHeights, firstOccurrence,
+            lastOccurrence);
+        dfs(root->right, height + 1, eulerTour, nodeHeights, firstOccurrence,
+            lastOccurrence);
+
+        lastOccurrence[root->val] = eulerTour.size();
+        eulerTour.push_back(root->val);
+    }
+public:
+    vector<int> treeQueries(TreeNode* root, vector<int>& queries) {
+        // Vectors and maps to store tree information
+        vector<int> eulerTour;
+        unordered_map<int, int> nodeHeights, firstOccurrence, lastOccurrence;
+
+        // Perform DFS to build Euler tour and node information
+        dfs(root, 0, eulerTour, nodeHeights, firstOccurrence, lastOccurrence);
+
+        int tourSize = eulerTour.size();
+        vector<int> maxDepthLeft(tourSize), maxDepthRight(tourSize);
+
+        // Initialize the first and last elements of maxHeight arrays
+        maxDepthLeft[0] = maxDepthRight[tourSize - 1] = nodeHeights[root->val];
+
+        // Build maxDepthLeft and maxDepthRight arrays
+        for (int i = 1; i < tourSize; i++) {
+            maxDepthLeft[i] =
+                max(maxDepthLeft[i - 1], nodeHeights[eulerTour[i]]);
+        }
+
+        for (int i = tourSize - 2; i >= 0; i--) {
+            maxDepthRight[i] =
+                max(maxDepthRight[i + 1], nodeHeights[eulerTour[i]]);
+        }
+
+        // Process queries
+        vector<int> results(queries.size());
+        for (int i = 0; i < queries.size(); i++) {
+            int queryNode = queries[i];
+            int leftMax = (firstOccurrence[queryNode] > 0)
+                              ? maxDepthLeft[firstOccurrence[queryNode] - 1]
+                              : 0;
+            int rightMax = (lastOccurrence[queryNode] < tourSize - 1)
+                               ? maxDepthRight[lastOccurrence[queryNode] + 1]
+                               : 0;
+            results[i] = max(leftMax, rightMax);
+        }
+
+        return results;
+    }
+};
+```
+
+**Solution 7: (Two Largest Cousins)**
+```
+Runtime: 35 ms
+Memory: 257.60 MB
+```
+```c++
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+ * };
+ */
+class Solution {
+    // Depth-first search to calculate node depths and subtree heights
+    int dfs(TreeNode* node, int level, vector<int>& nodeDepths,
+            vector<int>& subtreeHeights, vector<int>& firstLargestHeight,
+            vector<int>& secondLargestHeight) {
+        if (node == nullptr) return 0;
+
+        nodeDepths[node->val] = level;
+
+        // Calculate the height of the current subtree
+        int leftHeight = dfs(node->left, level + 1, nodeDepths, subtreeHeights,
+                             firstLargestHeight, secondLargestHeight);
+        int rightHeight =
+            dfs(node->right, level + 1, nodeDepths, subtreeHeights,
+                firstLargestHeight, secondLargestHeight);
+        int currentHeight = 1 + max(leftHeight, rightHeight);
+
+        subtreeHeights[node->val] = currentHeight;
+
+        // Update the largest and second largest heights at the current level
+        if (currentHeight > firstLargestHeight[level]) {
+            secondLargestHeight[level] = firstLargestHeight[level];
+            firstLargestHeight[level] = currentHeight;
+        } else if (currentHeight > secondLargestHeight[level]) {
+            secondLargestHeight[level] = currentHeight;
+        }
+
+        return currentHeight;
+    }
+public:
+    vector<int> treeQueries(TreeNode* root, vector<int>& queries) {
+        int n = 100000;
+        // Vectors to store node depths and heights
+        vector<int> nodeDepths(n + 1, 0);
+        vector<int> subtreeHeights(n + 1, 0);
+
+        // Vectors to store the first and second largest heights at each level
+        vector<int> firstLargestHeight(n + 1, 0);
+        vector<int> secondLargestHeight(n + 1, 0);
+
+        // Perform DFS to calculate depths and heights
+        dfs(root, 0, nodeDepths, subtreeHeights, firstLargestHeight,
+            secondLargestHeight);
+
+        vector<int> results;
+        results.reserve(queries.size());
+
+        // Process each query
+        for (int queryNode : queries) {
+            int nodeLevel = nodeDepths[queryNode];
+
+            // Calculate the height of the tree after removing the query node
+            if (subtreeHeights[queryNode] == firstLargestHeight[nodeLevel]) {
+                results.push_back(nodeLevel + secondLargestHeight[nodeLevel] -
+                                  1);
+            } else {
+                results.push_back(nodeLevel + firstLargestHeight[nodeLevel] -
+                                  1);
+            }
+        }
+
+        return results;
+    }
+};
+```
+
+**Solution 8: (DFS)**
+
+    level {-1,0,2,1,1,2,2,3}
+    dp[0]: {1,3) // {node, height}
+    dp[1]: {3,1),{4,2}
+    dp[2]: {2,0},{6,0},{5,1}
+    dp[3]: {7,0}
+
+    {-1,2,2,2,3,0,3,2,1,1}
+    dp[1]: {8,2}, {9,1}  // {node, height}
+    dp[2]: {2,1}, {1,0}, {3, 0}, {7,0}
+    dp[3]: {4,0}, {6,0}
+
+        1
+           5
+          3  
+         2 4
+
+    level: {0, 0, 3, 2, 3, 1}
+    dp[1]: [5, 2] // {node, height}
+    dp[2]: {3, 1}
+    dp[3]: {2, 0}, {4, 0}
+
+```
+Runtime: 693 ms
+Memory: 290.88 MB
+```
+```c++
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+ * };
+ */
+class Solution {
+    int dfs(TreeNode *node, int lv, unordered_map<int, int> &level, unordered_map<int, vector<pair<int,int>>> &dp) {
+        if (!node) {
+            return 0;
+        }
+        level[node->val] = lv;
+        int lh = dfs(node->left, lv+1, level, dp);
+        int rh = dfs(node->right, lv+1, level, dp);
+        pair<int,int> cur = {node->val, max(lh, rh)};
+        if (dp[lv].size() == 0) {
+            dp[lv].push_back(cur);
+        } else if (dp[lv].size() == 1) {
+            if (dp[lv][0].second < cur.second) {
+                swap(dp[lv][0], cur);
+            }
+            dp[lv].push_back(cur);
+        } else {
+            if (dp[lv][0].second < cur.second) {
+                swap(dp[lv][0], cur);
+            }
+            if (dp[lv][1].second < cur.second) {
+                swap(dp[lv][1], cur);
+            }
+        }
+        return max(lh, rh) + 1;
+    }
+public:
+    vector<int> treeQueries(TreeNode* root, vector<int>& queries) {
+        unordered_map<int,int> level;
+        unordered_map<int, vector<pair<int,int>>> dp;
+        dfs(root, 0, level, dp);
+        vector<int> ans;
+        for (auto q: queries) {
+            if (dp[level[q]].size() == 1) {
+                ans.push_back(level[q]-1);
+            } else if (q == dp[level[q]][0].first) {
+                ans.push_back(level[q] + dp[level[q]][1].second);
+            } else {
+                ans.push_back(level[q] + dp[level[q]][0].second);
+            }
+        }
+        return ans;
+    }
+};
+```
