--- a/algorithm/LeetCode/[Hard] 1671. Minimum Number of Removals to Make Mountain Array.md
+++ b/algorithm/LeetCode/[Hard] 1671. Minimum Number of Removals to Make Mountain Array.md
@@ -78,3 +78,92 @@ class Solution:
 
         return n - res - 1
 ```
+
+**Solution 2: (DP, Bottom-Up, Ｔotal - left-LIS - right-LIS)**
+```
+Runtime: 69 ms
+Memory: 14.78 MB
+```
+```c++
+class Solution {
+public:
+    int minimumMountainRemovals(vector<int>& nums) {
+        int n = nums.size(), lcs = 0;
+        vector<int> left(n), right(n);
+        for (int j = 1; j < n; j ++) {
+            for (int i = 0; i < j; i++) {
+                if (nums[i] < nums[j]) {
+                    left[j] = max(left[j], left[i]+1);
+                }
+            }
+        }
+        for (int i = n-2; i >= 0; i --) {
+            for (int j = i+1; j < n; j ++) {
+                if (nums[i] > nums[j]) {
+                    right[i] = max(right[i], right[j]+1);
+                }
+            }
+        }
+        for (int i = 0; i < n; i ++) {
+            if (left[i] && right[i]) {
+                lcs = max(lcs, left[i] + right[i]);
+            }
+        }
+        return n-lcs-1;
+    }
+};
+```
+
+**Solution 3: (LIS Using Binary Search)**
+```
+Runtime: 0 ms
+Memory: 15.14 MB
+```
+```c++
+class Solution {
+    vector<int> getLongestIncreasingSubsequenceLength(vector<int>& v) {
+        vector<int> lisLen(v.size(), 1);
+        vector<int> lis = {v[0]};
+
+        for (int i = 1; i < v.size(); i++) {
+            // Index of the first element which is equal to or greater than
+            // v[i].
+            int index = lower_bound(lis.begin(), lis.end(), v[i]) - lis.begin();
+
+            // Add to the list if v[i] is greater than the last element.
+            if (index == lis.size()) {
+                lis.push_back(v[i]);
+            } else {
+                // Assign the value v[i] to the returned index as it's going to
+                // smaller than or equal to the existing element.
+                lis[index] = v[i];
+            }
+
+            lisLen[i] = lis.size();
+        }
+
+        return lisLen;
+    }
+public:
+    int minimumMountainRemovals(vector<int>& nums) {
+        int N = nums.size();
+        vector<int> lisLength = getLongestIncreasingSubsequenceLength(nums);
+
+        reverse(nums.begin(), nums.end());
+        vector<int> ldsLength = getLongestIncreasingSubsequenceLength(nums);
+        // Reverse the length array to correctly depict the lenght of longest
+        // decreasing subsequnec for each index.
+        reverse(ldsLength.begin(), ldsLength.end());
+
+        int minRemovals = INT_MAX;
+        for (int i = 0; i < N; i++) {
+            if (lisLength[i] > 1 && ldsLength[i] > 1) {
+                minRemovals =
+                    min(minRemovals, N - lisLength[i] - ldsLength[i] + 1);
+            }
+        }
+
+        return minRemovals;
+    }
+};
+```
